@@ -2,6 +2,7 @@ ikiwiki (2.42) UNRELEASED; urgency=low
 
   * aggregate: Correct a mistake in the code that dummy up a guid for feeds
     lacking one.
+  * inline: Correct handling of urls relative to baseurl in feeds.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 03 Apr 2008 02:35:39 -0400
 
